3 January 2017: Wouter
	- configure --enable-systemd and lets unbound use systemd sockets if
	  you enable use-systemd: yes in unbound.conf.
	  Also there are contrib/unbound.socket and contrib/unbound.service:
	  systemd files for unbound, install them in /usr/lib/systemd/system.
	  Contributed by Sami Kerola and Pavel Odintsov.
	- Fix reload chdir failure when also chrooted to that directory.

2 January 2017: Wouter
	- Fix #1194: Cross build fails when $host isn't `uname` for getentropy.

23 December 2016: Ralph
	- Fix #1190: Do not echo back EDNS options in local-zone error response.
	- iana portlist update

21 December 2016: Ralph
	- Fix #1188: Unresolved symbol 'fake_dsa' in libunbound.so when built
	  with Nettle

19 December 2016: Ralph
	- Fix #1191: remove comment about view deletion.

15 December 2016: Wouter
	- iana portlist update
	- 64bit is default for windows builds.
	- Fix inet_ntop and inet_pton warnings in windows compile.

14 December 2016: Wouter
	- Fix #1178: attempt to fix setup error at end, pop result values
	  at end of install.

13 December 2016: Wouter
	- Fix #1182: Fix Resource leak (socket), at startup.
	- Fix unbound-control and ipv6 only.

9 December 2016: Wouter
	- Fix #1176: stack size too small for Alpine Linux.

8 December 2016: Wouter
	- Fix downcast warnings from visual studio in sldns code.
	- tag 1.6.0rc1 which became 1.6.0 on 15 dec, and trunk is 1.6.1.

7 December 2016: Ralph
	- Add DSA support for OpenSSL 1.1.0
	- Fix remote control without cert for LibreSSL

6 December 2016: George
	- Added generic EDNS code for registering known EDNS option codes,
	  bypassing the cache response stage and uniquifying mesh states. Four EDNS
	  option lists were added to module_qstate (module_qstate.edns_opts_*) to
	  store EDNS options from/to front/back side.
	- Added two flags to module_qstate (no_cache_lookup, no_cache_store) that
	  control the modules' cache interactions.