@@ -1,3 +1,7 @@
+5 January 2017: Wouter
+	- Fix to return formerr for queries for meta-types, to avoid
+	  packet amplification if this meta-type is sent on to upstream.
+
 3 January 2017: Wouter
 	- configure --enable-systemd and lets unbound use systemd sockets if
 	  you enable use-systemd: yes in unbound.conf.
